Fixing broken CSS

--- a/site/css/wea.css
+++ b/site/css/wea.css
@@ -703,11 +703,11 @@ a:target:before{
     border: 1px solid var(--wea-pink);
 }
 
-#imageText.portrait{
+.imageText.portrait{
     font-size:2rem;
 }
 
-#imageText.landscape{
+.imageText.landscape{
     font-size:1.4rem;
 }
 
